<resources>
    <string name="app_name">Hábitos</string>
    <string name="title_activity_main">Meus Hábitos</string>
    <string name="title_habit_list">Minha Rotina</string>
    <string name="title_habit_form">Adicionar hábito</string>

    <string name="habit_title">Título do Hábito</string>
    <string name="habit_complete">Hábito foi completado?</string>

    <string name="mon">Segunda</string>
    <string name="tue">Terça</string>
    <string name="wed">Quarta</string>
    <string name="thu">Quinta</string>
    <string name="fri">Sexta</string>
    <string name="sat">Sábado</string>
    <string name="sun">Domingo</string>

    <!-- Content Descriptions and Accessibility Text -->
    <string name="accessibility_add">Adicionar Hábito</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Actions -->
    <string name="action_settings">Configurações</string>

    <!-- Application Settings -->
    <string name="pref_title">Configurações</string>
    <string name="pref_show_completed">Exibir Concluídos</string>
    <string name="pref_allow_notification">Enviar Notificações</string>
    <string name="pref_send_email_reminder">Lembretes por E-mail?</string>
    <string name="pref_reminder_email">E-mail para Lembretes</string>
    <string name="pref_close">Sair</string>

    <!-- Habit BackLog List -->
    <string name="title_backlog_list">Meus Hábitos</string>
    <string name="nav_title_today">Hoje</string>
    <string name="nav_title_backlog">Backlog</string>
</resources>